Fix:Dark Mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,26 @@
 }
 
 .bg-gradiant {
-  background: linear-gradient(to right, rgb(134, 239, 172), rgb(59, 130, 246), rgb(147, 51, 234)) !important;
+  background: linear-gradient(
+    to right,
+    rgb(134, 239, 172),
+    rgb(59, 130, 246),
+    rgb(147, 51, 234)
+  ) !important;
 }
 
+/* Light mode styles */
+.light-mode {
+  --bg-color: #ffffff;
+  --text-color: #333333;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+}
+
+/* Dark mode styles */
+.dark-mode {
+  --bg-color: #333333;
+  --text-color: #ffffff;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+}
